removed title overlay pic and fixed transparent title overlap

--- a/styles.css
+++ b/styles.css
@@ -56,8 +56,9 @@ body {
 #title {
   position: sticky;
   top: 0px;
+  opacity: .4;
   margin: 205px auto 12px;
-  color:#d6d6d666;
+  color:#d6d6d6;
   z-index: 2;
   padding: 15px 30px;
   max-width: 90%;  
